--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
 
                         <div class="portrait"
-                            style="background-image: url('https://ritesh27gole.github.io/img/ritesh_profile.png');"></div>
-                        <meta itemprop="image" content="https://ritesh27gole.github.io/img/ritesh_profile.png">
+                            style="background-image: url('https://ritesh27gole.github.io/img/ritesh.jpg');"></div>
+                        <meta itemprop="image" content="https://ritesh27gole.github.io/img/ritesh.jpg">
 
 
                         <div class="portrait-title">
