--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
                             <li>
-                                <a itemprop="sameAs" href="https://ritesh27gole.github.io/pdf/cv.pdf" target="_blank">
+                                <a itemprop="sameAs" href="https://ritesh27gole.github.io/pdf/cv_ritesh_oncampus.pdf" target="_blank">
                                     <i class="fa fa-file-pdf-o big-icon"></i>
                                     <!-- why not updated -->
                                 </a>
@@ -207,15 +207,8 @@
         </div>
     </section>
 
-
-
-
     <section id="projects" class="home-section">
         <div class="container">
-
-
-
-
             <div class="row">
                 <div class="section-heading">
                     <h1 style="text-align:center">Projects</h1>
@@ -223,80 +216,21 @@
                             href="https://ritesh27gole.github.io/pdf/cv.pdf" target="_blank">CV</a></p> -->
                 </div>
                 <div>
-                    <br> <br>
-
-                    <div id="container-projects" class="row isotope">
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-j8q76szj4balata" title=""
-                                    class="card-image hover-overlay">
-                                    <img src="/img/vw.jpg" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-j8q76szj4balata">Autonomous Racing on a Volkswagen GTI</a></h4>
-                                    <div class="card-description">
-                                        <p>Developing controllers for guiding a Volkswagen Golf GTI around an oval track as fast as possible, with constraints on motion that ensured a comfortable ride. See project <a
-                                                href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-j8q76szj4balata"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jx5hek00" title=""
-                                    class="card-image hover-overlay">
-                                    <img  src= "/img/crokinole.jpg" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jx5hek00">Robot Arm Crokinole</a></h4>
-                                    <div class="card-description">
-                                        <p>Exploring the versatility of torque-controlled robot arms by having a 7 degree-of-freedom arm to play a French board game called "Crokinole" See  <a
-                                                href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jx5hek00"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jtaxpnry" title=""
-                                    class="card-image hover-overlay">
-                                    <img src="/img/turtlebot.png" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jtaxpnry">Autonomous Exploration and Pickup/Delivery using Turtlebot</a></h4>
-                                    <div class="card-description">
-                                        <p>Developing ROS packages for a turtlebot to autonomously explore and navigate through a mock environment to pick and deliver items. See  <a
-                                                href="https://varunnayak3101.wixsite.com/varununayak/projects#comp-jtaxpnry"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <br>
                         
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\turtlebot\index.html" title=""
+                                <a href="project\yuvaan\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/aerialman.png" alt="" class="img-responsive">
+                                    <img src="/img/yuvaan.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\turtlebot\index.html">Aerial Manipulation</a></h4>
+                                    <h4><a href="project\yuvaan\index.html">Yuvaan Mars Rover Project</a></h4>
                                     <div class="card-description">
-                                        <p>Design and control of a light-weight aerial manipulator for inspection - like a flying hand! See  <a
-                                                href="project\turtlebot\index.html"
+                                        <p>Design, manufacturing and control of a Mars rover prototype for International Rover Challenge. See  <a
+                                                href="project\yuvaan\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -306,82 +240,22 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="https://ritesh27gole.github.io/project/me218b/" title=""
+                                <a href="project\autonav\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/me218bots.jpg" alt="" class="img-responsive">
+                                    <img src="/img/autonav.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="https://ritesh27gole.github.io/project/me218b/">Building an Autonomous Robot from Scratch - ME218</a></h4>
+                                    <h4><a href="project\autonav\index.html">AutoNAV</a></h4>
                                     <div class="card-description">
-                                        <p>An autonomous differential drive robot built from absolute scratch in the ME218B course project. The robot had to pickup, sort and dispose off coloured balls in specific zones while navigating an arena with various provisions for localization such as beacons and lines. See  <a
-                                                href="https://ritesh27gole.github.io/project/me218b/"
+                                        <p>Autonomous Navigation of Underwater ROV for pipeline welding purposes. See  <a
+                                                href="project\autonav\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://github.com/varununayak/sideslip_estimation_aa273" title=""
-                                    class="card-image hover-overlay">
-                                    <img src="/img/sideslip.png" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://github.com/varununayak/sideslip_estimation_aa273">Side-Slip Angle Estimation for a Vehicle
-                                    </a></h4>
-                                    <div class="card-description">
-                                        <p> Using an IMU and dynamics models to estimate the side-slip angle of a vehicle by implementing nonlinear filtering methods such as the Extended and Unscented Kalman Filters and Particle Filters. See  <a
-                                                href="https://github.com/varununayak/sideslip_estimation_aa273"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://github.com/varununayak/autonomous_offroading_aa228_project" title=""
-                                    class="card-image hover-overlay">
-                                    <img src="/img/offroad.png" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://github.com/varununayak/autonomous_offroading_aa228_project">Reinforcement Learning Based Planning for Offroad Vehicles
-                                    </a></h4>
-                                    <div class="card-description">
-                                        <p> Developing a novel velocity planning algorithm that prioritized passenger comfort given finite knowledge of the terrain ahead of the vehicle. See  <a
-                                                href="https://github.com/varununayak/autonomous_offroading_aa228_project"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
-                            <div class="card">
-
-                                <a href="https://www.youtube.com/watch?v=R5IdwELFCHM" title=""
-                                    class="card-image hover-overlay">
-                                    <img src="/img/odom.jpg" alt="" class="img-responsive">
-                                </a>
-
-                                <div class="card-text">
-                                    <h4><a href="https://www.youtube.com/watch?v=R5IdwELFCHM"> Vehicle Odometry using Deep Convolutional Networks on KITTI
-                                    </a></h4>
-                                    <div class="card-description">
-                                        <p> A deep convolutional network utilizing both optical flow and stereo depth to estimate the pose of the ego vehicle, using the KITTI open dataset. See  <a
-                                                href="https://www.youtube.com/watch?v=R5IdwELFCHM"
-                                                target="_blank">page</a> for details.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
                     </div>
                 </div>
 
@@ -404,21 +278,20 @@
 
                         <li>
                             <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
-                            <span id="person-email" itemprop="email"><a
-                                    href="mailto:varunnayak3101@gmail.com">varunnayak3101@gmail.com</a></span>
+                            <span id="person-email" itemprop="email"><a href="mailto:varunnayak3101@gmail.com">studyritesh27gole@gmail.com</a></span>
                         </li>
 
 
                         <li>
                             <i class="fa fa-linkedin big-icon" aria-hidden="true"></i>
-                            <span id="person-linkedin" itemprop="sameAs" href="https://www.linkedin.com/in/varun-uday-nayak/"> https://www.linkedin.com/in/varun-uday-nayak/ </span>
+                            <span id="person-linkedin" itemprop="sameAs"><a href="https://www.linkedin.com/in/ritesh-gole/">https://www.linkedin.com/in/ritesh-gole/</a></span>
                         </li>
 
 
 
                         <li>
                             <i class="fa-li fa fa-map-marker fa-2x" aria-hidden="true"></i>
-                            <span id="person-address" itemprop="address">Palo Alto, CA</span>
+                            <span id="person-address" itemprop="address">Mumbai, India</span>
                         </li>
 
 
