--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             target="_blank">Dr. Biranchi Panda</a> at Indian Institute of Technology (IIT), Guwahati and <a href="https://www.iitbbs.ac.in/profile.php/satish-kumar-panda/"
                                 target="_blank">Dr. Satish Kumar Panda</a> at Indian Institute of Technology (IIT), Bhubaneshwar.
                             </br></br>
-                            You can find my full CV <a href="https://ritesh27gole.github.io/pdf/cv.pdf"
+                            You can find my full CV <a href="https://ritesh27gole.github.io/pdf/cv_ritesh_oncampus.pdf"
                                 target="_blank">here</a> and further information on my projects.
                             </br></br></p>
 
