--- a/index.html
+++ b/index.html
@@ -278,13 +278,13 @@
 
                         <li>
                             <i class="fa-li fa fa-envelope fa-2x" aria-hidden="true"></i>
-                            <span id="person-email" itemprop="email"><a href="mailto:varunnayak3101@gmail.com">studyritesh27gole@gmail.com</a></span>
+                            <span id="person-email" itemprop="email"><a href="mailto:studyritesh27gole@gmail.com">studyritesh27gole@gmail.com</a></span>
                         </li>
 
 
                         <li>
                             <i class="fa fa-linkedin big-icon" aria-hidden="true"></i>
-                            <span id="person-linkedin" itemprop="sameAs"><a href="https://www.linkedin.com/in/ritesh-gole/">https://www.linkedin.com/in/ritesh-gole/</a></span>
+                            <span id="person-linkedin" itemprop="sameAs"><a href="https://www.linkedin.com/in/ritesh-gole/" target="_blank" itemprop="url">https://www.linkedin.com/in/ritesh-gole/</a></span>
                         </li>
 
 
