--- a/index.html
+++ b/index.html
@@ -263,16 +263,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\yuvaan\index.html" title=""
+                                <a href="project\object_follower\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/yuvaan.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\yuvaan\index.html">Object follower</a></h4>
+                                    <h4><a href="project\object_follower\index.html">Object follower</a></h4>
                                     <div class="card-description">
                                         <p> Aruco Marker tracking and following implemented on UR5 Robot Arm. See  <a
-                                                href="project\yuvaan\index.html"
+                                                href="project\object_follower\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -282,16 +282,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\autonav\index.html" title=""
+                                <a href="project\cosmo_logistic\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/autonav.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\autonav\index.html">Cosmo Logistics Bot</a></h4>
+                                    <h4><a href="project\cosmo_logistic\index.html">Cosmo Logistics Bot</a></h4>
                                     <div class="card-description">
                                         <p>A robotic arm and mobile robot collaborate to sort and prepare packages to be transported. See  <a
-                                                href="project\autonav\index.html"
+                                                href="project\cosmo_logistic\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -301,16 +301,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\wheeled_biped\index.html" title=""
+                                <a href="project\uav_ugv\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/wheeled_biped.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\wheeled_biped\index.html">UAV Guided UGV</a></h4>
+                                    <h4><a href="project\uav_ugv\index.html">UAV Guided UGV</a></h4>
                                     <div class="card-description">
                                         <p>Guiding UGV using a UAV autonomously on roads in mountainous regions. See  <a
-                                                href="project\wheeled_biped\index.html"
+                                                href="project\uav_ugv\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -328,16 +328,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\yuvaan\index.html" title=""
+                                <a href="project\scs\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/yuvaan.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\yuvaan\index.html">Supervisory Control Systems</a></h4>
+                                    <h4><a href="project\scs\index.html">Supervisory Control Systems</a></h4>
                                     <div class="card-description">
                                         <p> Modelling and Implementation of Supervisory Control Systems for EV Powertrain. See  <a
-                                                href="project\yuvaan\index.html"
+                                                href="project\scs\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -347,16 +347,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\autonav\index.html" title=""
+                                <a href="project\db\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/autonav.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\autonav\index.html">Delivery Bike</a></h4>
+                                    <h4><a href="project\db\index.html">Delivery Bike</a></h4>
                                     <div class="card-description">
                                         <p>Design and control of flywheel-based self-balancing delivery. See  <a
-                                                href="project\autonav\index.html"
+                                                href="project\db\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
@@ -366,16 +366,16 @@
                         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
-                                <a href="project\wheeled_biped\index.html" title=""
+                                <a href="project\fido\index.html" title=""
                                     class="card-image hover-overlay">
                                     <img src="/img/wheeled_biped.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
-                                    <h4><a href="project\wheeled_biped\index.html">FIDO</a></h4>
+                                    <h4><a href="project\fido\index.html">FIDO</a></h4>
                                     <div class="card-description">
                                         <p>Friendly Intelligent Devoted Orb is a spherical robot used for different purposes. See  <a
-                                                href="project\wheeled_biped\index.html"
+                                                href="project\fido\index.html"
                                                 target="_blank">page</a> for details.</p>
                                     </div>
                                 </div>
