--- a/project/db/index.html
+++ b/project/db/index.html
@@ -34,7 +34,7 @@
 
   <link rel="canonical" href="https://ritesh27gole.github.io/project/turtlebot/">
 
-  <title>Wheeled Bipedal Robot</title>
+  <title>Self Balancing Delivery Bike</title>
 
   <style>
     .image-container {
@@ -80,18 +80,19 @@
       <div class="article-container article-style">
     
         <div class="article-title">
-          <h1 itemprop="name">Wheeled Bipedal Robot</h1>
+          <h1 itemprop="name">Self Balancing Delivery Bike</h1>
         </div> 
         <!-- <br><br> -->
         <p>
           <ul>
-            <li>Modeled a wheeled biped robot with a 4 bar mechanism based limbs enabling rotation in knee and thigh</li>
-            <li>Performed dynamic modeling by getting equations of motion and linearizing them to get state space equations</li>
-            <li>Designed an LQR controller for simple balancing of the robot and simulated the whole system in Gazebo via ROS</li>
-            <li>Trained and simulated simple biped robot model with external perturbations using RL policy in Mujoco simulator</li>
+            <li>Designed a self-balancing flywheel based delivery bike with LQR based controller for balancing</li>
+
+            <li>Developed algorithms for driving, steering, road-following and color detection and simulated it in CoppeliaSim</li>
+
+            <li>Mathematically modeled it using the Euler-lagrangian method, calculated its controllability, observability and stability, and used pole placement method to get required controller parameters</li>
           </ul>      
 
-          <iframe width="800" height="450" src="https://www.youtube.com/embed/049Rc-GSNSU?si=jLOGoZooMUQZPOXb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/NJRCBzGBq0s?si=_BErrjUZRoVdoyzS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
 
         
