--- a/project/uav_ugv/index.html
+++ b/project/uav_ugv/index.html
@@ -34,7 +34,7 @@
 
   <link rel="canonical" href="https://ritesh27gole.github.io/project/turtlebot/">
 
-  <title>Wheeled Bipedal Robot</title>
+  <title>UAV Guided UGV</title>
 
   <style>
     .image-container {
@@ -80,18 +80,18 @@
       <div class="article-container article-style">
     
         <div class="article-title">
-          <h1 itemprop="name">Wheeled Bipedal Robot</h1>
+          <h1 itemprop="name">UAV Guided UGV</h1>
         </div> 
         <!-- <br><br> -->
         <p>
           <ul>
-            <li>Modeled a wheeled biped robot with a 4 bar mechanism based limbs enabling rotation in knee and thigh</li>
-            <li>Performed dynamic modeling by getting equations of motion and linearizing them to get state space equations</li>
-            <li>Designed an LQR controller for simple balancing of the robot and simulated the whole system in Gazebo via ROS</li>
-            <li>Trained and simulated simple biped robot model with external perturbations using RL policy in Mujoco simulator</li>
+            <li>Unmanned Aerial Vehicle (UAV) aerial imaging to aid a Unmanned Ground Vehicle (UGV) in navigation through a complex static environment, without any sensors on the UGV, in a Gazebo (ROS) environment</li>
+            <li>Used Laplacian and Otsu methods for car edge detection and masking, and wrote controller for car cruising</li>
+            <li>Applied Principal Component Analysis for vectorizing the direction in which the car is facing</li>
+            <li>Also learnt to integrate computer vision tools with ROS and Gazebo</li>
           </ul>      
 
-          <iframe width="800" height="450" src="https://www.youtube.com/embed/049Rc-GSNSU?si=jLOGoZooMUQZPOXb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/94WhqMjYMok?si=PV6zrF2rSyBlICLn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
 
         
