--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                                 <a href="project\object_follower\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/yuvaan.jpg" alt="" class="img-responsive">
+                                    <img src="/img/object_follower.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
@@ -284,7 +284,7 @@
 
                                 <a href="project\cosmo_logistic\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/autonav.jpg" alt="" class="img-responsive">
+                                    <img src="/img/cl.jpg" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
@@ -330,7 +330,7 @@
 
                                 <a href="project\scs\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/yuvaan.jpg" alt="" class="img-responsive">
+                                    <img src="/img/scs.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
@@ -349,7 +349,7 @@
 
                                 <a href="project\db\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/autonav.jpg" alt="" class="img-responsive">
+                                    <img src="/img/db.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
@@ -368,7 +368,7 @@
 
                                 <a href="project\fido\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/wheeled_biped.png" alt="" class="img-responsive">
+                                    <img src="/img/fido.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
