--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             target="_blank">Dr. Biranchi Panda</a> at Indian Institute of Technology (IIT), Guwahati and <a href="https://www.iitbbs.ac.in/profile.php/satish-kumar-panda/"
                                 target="_blank">Dr. Satish Kumar Panda</a> at Indian Institute of Technology (IIT), Bhubaneshwar.
                             </br></br>
-                            You can find my full CV <a href="https://ritesh27gole.github.io/pdf/cv_ritesh_oncampus.pdf"
+                            You can find my full CV <a href="https://ritesh27gole.github.io/pdf/Ritesh_Resume.pdf"
                                 target="_blank">here</a> and further information on my projects.
                             </br></br></p>
 
@@ -303,7 +303,7 @@
 
                                 <a href="project\uav_ugv\index.html" title=""
                                     class="card-image hover-overlay">
-                                    <img src="/img/wheeled_biped.png" alt="" class="img-responsive">
+                                    <img src="/img/uav_ugv.png" alt="" class="img-responsive">
                                 </a>
 
                                 <div class="card-text">
@@ -363,7 +363,7 @@
                             </div>
                         </div>
 
-                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
+                        <!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-item isotope-item ml">
                             <div class="card">
 
                                 <a href="project\fido\index.html" title=""
@@ -380,7 +380,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
             </div>
