--- a/project/cosmo_logistic/index.html
+++ b/project/cosmo_logistic/index.html
@@ -85,13 +85,12 @@
         <!-- <br><br> -->
         <p>
           <ul>
-            <li>Modeled a wheeled biped robot with a 4 bar mechanism based limbs enabling rotation in knee and thigh</li>
-            <li>Performed dynamic modeling by getting equations of motion and linearizing them to get state space equations</li>
-            <li>Designed an LQR controller for simple balancing of the robot and simulated the whole system in Gazebo via ROS</li>
-            <li>Trained and simulated simple biped robot model with external perturbations using RL policy in Mujoco simulator</li>
+            <li>Executed Aruco Marker pose estimation with Intel Realsense Camera and published transform data using TF2 package.</li>
+            <li>Orchestrated trajectory planning and collision avoidance for UR5 robot arm using MoveIt for pick and place operations.</li>
+            <li>Conducted SLAM with AMCL and EKF-based localization and implemented navigation using Nav2.</li>
           </ul>      
-
-          <iframe width="800" height="450" src="https://www.youtube.com/embed/049Rc-GSNSU?si=jLOGoZooMUQZPOXb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/oOqkUKCz5H0?si=k3GUrrrz7iMty6s0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/_sijToJmSeM?si=oUIWUwbfKyIlxuTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
 
         
