updated cosmo logistic bot

--- a/project/cosmo_logistic/index.html
+++ b/project/cosmo_logistic/index.html
@@ -90,6 +90,7 @@
             <li>Conducted SLAM with AMCL and EKF-based localization and implemented navigation using Nav2.</li>
           </ul>      
           <iframe width="800" height="500" src="https://www.youtube.com/embed/oOqkUKCz5H0?si=k3GUrrrz7iMty6s0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/8a2Oyj9j1mw?si=OkXjR_szq-TVv4qi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <iframe width="800" height="500" src="https://www.youtube.com/embed/_sijToJmSeM?si=oUIWUwbfKyIlxuTI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </p>
 
